--- a/Projet/src/main/webapp/Views/Client.html
+++ b/Projet/src/main/webapp/Views/Client.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Gestion des commandes</title>
+        <title>Page client</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <!-- On charge jQuery -->
         <script	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
@@ -19,7 +19,7 @@
         <form action="../ProjetWeb/" method="POST"> 
             <input type='submit' name='action' value='DECONNEXION'>
         </form>
-        <h1>Liste des produits</h1>
+        <h1>Liste des différents produits</h1>
         <!-- La zone où les résultats vont s'afficher -->
         <div id="products"></div>
 
