--- a/Projet/src/main/webapp/Views/css/client.css
+++ b/Projet/src/main/webapp/Views/css/client.css
@@ -11,12 +11,13 @@ and open the template in the editor.
 body {
 	font-family:"Arial";
 	font-size: 0.8em;
-	color:white;
+	color:black;
         
 }
 
 header{
 	background-color: #2c3e50;
+        
 	padding-top:5px;
 	padding-bottom:5px;
 	padding-left:30px;
@@ -24,4 +25,17 @@ header{
 	height:80px;
 	display:flex;
 	align-items:center;
+}
+input[type=submit]{
+    
+    background-color: #2c3e50;
+    border-color: silver;
+    font-family: 'Roboto';
+    font-size: 14px;
+    font-weight: bold; 
+    height: 40px;
+    cursor:pointer;
+    border:none;
+    width:110px;
+    color:silver;
 }
