--- a/Projet/src/main/webapp/Views/css/client.css
+++ b/Projet/src/main/webapp/Views/css/client.css
@@ -19,8 +19,12 @@ body {
 }
 
 header{
+    box-sizing: content-box;
+    width: 3000px;
+    
+
 	background-color: #2c3e50;
-        margin-lef:0px;
+        margin-left:0px;
 	padding-top:5px;
 	padding-bottom:5px;
 	padding-left:30px;
