--- a/Projet/src/main/webapp/Views/Client.html
+++ b/Projet/src/main/webapp/Views/Client.html
@@ -49,7 +49,7 @@
             <option value="Western Fast">Western Fast</option>
             </select>
             </TD>
-            <TD onclick="addCommande({{product_id}})"><center><img src="views/images/panier.png" style="width: 45%; height: 45%"></center></TD>
+            <TD onclick="addCommande({{product_id}})"><center><img src="Views/images/tracking.png"></center></TD> 
 
             </TR>
             {{/records}}
@@ -73,8 +73,8 @@
             <TR>
             <TD>{{order_num}}</TD><TD id="product_id{{order_num}}">{{product_id}}</TD><TD id="qte{{order_num}}">{{quantity}}</TD><TD>{{shipping_cost}}</TD>
             <TD>{{purchase_cost}}</TD><TD>{{sales_date}}</TD><TD id="sd{{order_num}}">{{shipping_date}}</TD><TD id="fc{{order_num}}">{{freight_company}}</TD>
-            <TD id="btnUpdate{{order_num}}" onclick="paramUpdateCommande('{{order_num}}')" style="width: 80px"><center><img src="views/images/update.png" style="width: 45%; height: 45%"></center></TD>
-            <TD id="btnDelete{{order_num}}" onclick="deleteCommande('{{order_num}}')" style="width: 80px"><center><img src="views/images/delete.png" style="width: 45%; height: 45%"></center></TD>
+            <TD id="btnUpdate{{order_num}}" onclick="paramUpdateCommande('{{order_num}}')" style="width: 80px"><center><img src="Views/images/refresh.png" style="width: 45%; height: 45%"></center></TD>
+            <TD id="btnDelete{{order_num}}" onclick="supprCommande('{{order_num}}')" style="width: 80px"><center><img src="Views/images/delete-button.png"></center></TD>
             </TR>
             {{/records}}
             </TABLE>
