--- a/Projet/src/main/webapp/Views/css/client.css
+++ b/Projet/src/main/webapp/Views/css/client.css
@@ -10,38 +10,58 @@ and open the template in the editor.
 *{box-sizing:border-box;}
 
 body {
-    
-        background-image: linear-gradient(rgb(70,130,180), white);
-	font-family:"Arial";
-	font-size: 0.8em;
-	color:black;
-        
+
+    background: url("../images/satellite.jpg")no-repeat fixed ;
+    background-size: 100%;
+    font-family:"Roboto";
+    font-size: 0.8em;
+    color:black;
+
+
 }
+
+@keyframes example{
+    
+    0% {color:rgba(255, 255, 255, .75);}
+    50%{color:grey;}
+    100%{color:rgba(255, 255, 255, .75);}
+}
+
+h1{
+    color:rgba(255, 255, 255, .75);
+    font-size:60px;
+    padding-bottom: 40px;
+    font-variant:small-caps;
+    animation-name: example ;
+    animation-duration:4s;
+    animation-delay:1s;
+    animation-iteration-count: 60;
+    border:solid;
+    padding: 5px;
+    
+}
+
 
 header{
+    font-family: 'Roboto';
     box-sizing: content-box;
-    width: 3000px;
-    
-
-	background-color: #2c3e50;
-        margin-left:0px;
-	padding-top:5px;
-	padding-bottom:5px;
-	padding-left:30px;
-	padding-right:30px;
-	height:80px;
-	display:flex;
-	align-items:center;
+    margin-left:0px;
+    padding-top:5px;
+    padding-bottom:5px;
+    padding-left:30px;
+    padding-right:30px;
+    display:flex;
+    align-items:center;
 }
 input[type=submit]{
-  
+
     align-content: center;
-    background-color: #2c3e50;
+    background-color: rgba(255,255,255,0.10);
     border-color: silver;
     border-width: 1px;
     font-family: 'Roboto';
     font-size: 12px;
-    font-weight: bold; 
+    font-weight: normal; 
     height: 40px;
     cursor:pointer;
     width:110px;
@@ -50,5 +70,84 @@ input[type=submit]{
 
 /* Permet de modifier les inputs submit au survol de la souris */
 input[type=submit]:hover{
-    color: white; 
+    color: black; 
+}
+
+
+table{
+    font-family: 'Roboto';
+    font-size: 14px;
+    border:solid ;
+    border-width: 1px;
+    border-color:black;
+    border-collapse: collapse;
+    text-align: center;
+    color:black;
+   
+
+}
+/* on modifie la 1ère ligne du tableau */
+th {
+    font-family: 'Roboto';
+    font-size: 20px;
+    background-color: rgba(255, 255, 255, .75);
+    border-bottom-color: black;
+    padding:  10px;
+    color:#1a569a;
+    
+
+}
+/* on modifie les autres lignes du tableau */
+
+td {
+    border-bottom:  1px solid black;
+    border-top:1px solid black;
+    padding: 2px;
+    cursor: pointer;
+    position: relative;
+    background-color: rgba(255, 255, 255, .5);
+    font-size:15px;
+}
+
+
+/* Permet de modifier les lignes des tableaux au survol de la souris */
+tr:hover{
+    background-color: rgba(255, 255, 255, .75);
+}
+/* Permet de modifier la case survolée */
+td:hover{
+    background-color: rgb(255, 255, 255);
+    border: 4px solid black;
+}
+
+/* Permet de modifier les class "btn", "qte" et "fc" */
+.btn, .qte, .fc{
+    margin-top: 1px;
+    margin-bottom: 1px;
+}
+
+/* Permet de modifier la class "qte" des quantité de produit*/
+.qte{
+    width: 40px;
+}
+
+.fc, .fc option, .qte {
+    padding:5px;
+    border-radius:10px 100px / 120px;
+    background:rgba(255, 255, 255, .5);
+    color:black;
+    border:none;
+    outline:none;
+    display: inline-block;
+    appearance:none;
+    cursor:pointer;
+    font-family: 'Roboto';
+    font-size: 14px;
+
+
+}
+
+table.img{
+    width:50px;
+    height:50px;
 }
