--- a/Projet/src/main/webapp/Views/css/login.css
+++ b/Projet/src/main/webapp/Views/css/login.css
@@ -70,6 +70,8 @@ h2 {
   outline: none;
   height: 40px;
   color: rgb(247,248,249);
+  font-family:'Dosis';
+  letter-spacing: 2px;
   font-size: 16px;
 }
 
@@ -84,10 +86,12 @@ h2 {
   outline: none;
   height: 40px;
   color: rgb(247,248,249);
+  font-family:'Dosis';
+  letter-spacing: 2px;
   font-size: 16px;
   background: #175181;
   cursor: pointer;
-  border-radius: 20px;
+  border-radius:10px 100px / 120px;
 }
 
 /* Permet de modifier les inputs submit au survol de la souris */
