--- a/Projet/src/main/webapp/Views/css/client.css
+++ b/Projet/src/main/webapp/Views/css/client.css
@@ -12,10 +12,11 @@ and open the template in the editor.
 body {
 
     background: url("../images/satellite.jpg")no-repeat fixed ;
-    background-size: 100%;
+    background-size: cover;
     font-family:"Roboto";
     font-size: 0.8em;
     color:black;
+    
 
 
 }
