--- a/Projet/src/main/webapp/Views/Admin.html
+++ b/Projet/src/main/webapp/Views/Admin.html
@@ -10,7 +10,7 @@
     </head>
     <body><center>
         <!-- Le bouton Déconnexion -->
-        <form action="../ProjetWeb/" method="POST"> <input type='submit' name='action' value='DECONNEXION'></form>
+        <form action="../Projet/" method="POST"> <input type='submit' name='action' value='DECONNEXION'></form>
         <h1>Statistiques des Chiffres d'Affaires</h1><br/><br/>
         <!-- Les boutons de redirection vers les différents chiffres d'affaire -->
         <input type="button" onclick='location.href="Views/ChiffreClient.jsp"' value=">> Clients <<"><br/><br/><br/><br/>
