--- a/Projet/src/main/webapp/Views/css/client.css
+++ b/Projet/src/main/webapp/Views/css/client.css
@@ -13,7 +13,7 @@ body {
 
     background: url("../images/satellite.jpg")no-repeat fixed ;
     background-size: cover;
-    font-family:"Roboto";
+    font-family:"Oswald";
     font-size: 0.8em;
     color:black;
     
