--- a/Projet/src/main/webapp/Views/css/statistiques_admin.css
+++ b/Projet/src/main/webapp/Views/css/statistiques_admin.css
@@ -1,6 +1,6 @@
 /* Permet de définir l'image de fond de la page */
 body {
-  background: url("../images/bg_statistiques.jpg") no-repeat;
+  background: url("../images/world.jpg") no-repeat fixed ;
   background-size: cover;
 }
 
@@ -12,15 +12,28 @@ h1, p, input[type=date] {
     letter-spacing: 2px;
     font-size: 17px;
 }
+@keyframes example{
+
+    0% {color:rgba(255, 255, 255, .75);}
+    50%{color:grey;}
+    100%{color:rgba(255, 255, 255, .75);}
+}
+
 
 /* Permet de modifier les titres de niveau h1 */
 h1{
-    font-size: 38px;
+     border:solid;
+    padding: 5px;
+    font-size: 45px;
+    animation-name: example ;
+    animation-duration:4s;
+    animation-delay:1s;
+    animation-iteration-count: 60;
 }
 
 /* Permet de modifier les paragraphes */
 p{
-    font-weight: bold;
+/*    font-weight: bold;*/
     font-size: 20px;
     text-align:center;
 }
