--- a/Projet/src/main/webapp/Views/Admin.html
+++ b/Projet/src/main/webapp/Views/Admin.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bienvenue</title>
+        <title>Page Administrateur</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <!-- On charge les polices Google -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:400,500|Roboto:300,400,500,700|Ubuntu+Condensed">
         <!-- un CSS pour formatter la page web -->
-        <link rel="stylesheet" href="Views/css/Admin.css">
+        <link rel="stylesheet" href="Views/css/admin.css">
     </head>
     <body><center>
+        <header>
         <!-- Le bouton Déconnexion -->
         <form action="../Projet/" method="POST"> <input type='submit' name='action' value='DECONNEXION'></form>
+        </header>
         <h1>Statistiques des Chiffres d'Affaires</h1><br/><br/>
         <!-- Les boutons de redirection vers les différents chiffres d'affaire -->
-        <input type="button" onclick='location.href="Views/ChiffreClient.jsp"' value=">> Clients <<"><br/><br/><br/><br/>
-        <input type="button" onclick='location.href="Views/ChiffreZoneGeo.jsp"' value=">> Zones géographiques <<"><br/><br/><br/><br/>
-        <input type="button" onclick='location.href="Views/ChiffreCateg.jsp"' value=">> Catégories d'articles <<">
+        <input type="button" onclick='location.href="Views/ChiffreClient.jsp"' value="Clients">
+        <input type="button" onclick='location.href="Views/ChiffreZoneGeo.jsp"' value="Zones géographiques">
+        <input type="button" onclick='location.href="Views/ChiffreCateg.jsp"' value="Catégories d'articles">
     </center>
     </body>
 </html>
