--- a/Projet/src/main/webapp/Views/Client.html
+++ b/Projet/src/main/webapp/Views/Client.html
@@ -3,6 +3,8 @@
     <head>
         <title>Page client</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <!-- Image d'onglet -->
+        <link rel="shortcut icon" href="Views/images/debit-card.png">
         <!-- On charge jQuery -->
         <script	src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <!-- On charge le moteur de template mustache https://mustache.github.io/ -->
