--- a/Projet/src/main/webapp/Views/Admin.html
+++ b/Projet/src/main/webapp/Views/Admin.html
@@ -3,6 +3,8 @@
     <head>
         <title>Page Administrateur</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+        <!-- Image d'onglet -->
+        <link rel="shortcut icon" href="Views/images/customer-service.png">
         <!-- On charge les polices Google -->
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald:400,500|Roboto:300,400,500,700|Ubuntu+Condensed">
         <!-- un CSS pour formatter la page web -->
