--- a/Projet/src/main/webapp/Views/css/admin.css
+++ b/Projet/src/main/webapp/Views/css/admin.css
@@ -4,7 +4,7 @@ body {
     background-size: cover; 
     margin-top:2%;
 }
-/* Permet de modifier le bouton deconnexion*/
+/* modifie le header (position du bouton deconnexion)*/
 header{
     font-family: 'Roboto';
     box-sizing: content-box;
